--- a/base-microservice/base-provider/pom.xml
+++ b/base-microservice/base-provider/pom.xml
@@ -17,6 +17,15 @@
            <groupId>org.springframework.cloud</groupId>
            <artifactId>spring-cloud-starter-eureka</artifactId>
          </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-oauth2</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>cn.gov.wuxi</groupId>
+            <artifactId>base-feign-utils</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
